[project]
name = "camera_json_gen"
version = "0.1.0"
description = "JSON Camera Generator — circular and spiral camera animations for SuperSplat"
authors = [{name = "Brian Davis (bb6)"}]
dependencies = []

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []
