[project]
name = "camera_json_gen"
version = "0.0.3"
description = "JSON Camera Generator — circular and spiral camera animations Nightly Build only."
authors = [{name = "Brian Davis (bb6)"}]
dependencies = []

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.1"
required_features = []
